<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/rectangle_bg"
                android:contentDescription="@string/top_background" />

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:adjustViewBounds="true"
                android:layout_marginLeft="-100dp"
                android:layout_marginTop="-100dp"
                android:src="@drawable/circle_bg_big"
                android:layout_marginStart="-100dp"
                android:contentDescription="@string/big_circle" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:adjustViewBounds="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-50dp"
                android:layout_marginTop="-50dp"
                android:src="@drawable/circle_bg_small"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-50dp"
                android:contentDescription="@string/small_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/quiz_list"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-86dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/astronomy_quiz"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:background="@drawable/card"
                    android:textSize="33sp"
                    android:textColor="#ffffff"
                    android:padding="37dp"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/montserratalternates_bold"
                    android:gravity="center"
                    android:text="@string/astronomy_quiz"
                    android:layout_marginStart="25dp" />

                <TextView
                    android:id="@+id/geography_quiz"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:background="@drawable/card_geography"
                    android:textSize="33sp"
                    android:textColor="#ffffff"
                    android:padding="37dp"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/montserratalternates_bold"
                    android:gravity="center"
                    android:text="@string/geography_quiz"
                    android:layout_marginStart="25dp" />

                <TextView
                    android:id="@+id/zoology_quiz"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:background="@drawable/card_zoology"
                    android:textSize="33sp"
                    android:textColor="#ffffff"
                    android:padding="37dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/montserratalternates_bold"
                    android:gravity="center"
                    android:text="@string/zoology_quiz" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="23dp"
            android:textColor="#202021"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/recent_quizzes"
            android:layout_marginStart="23dp" />

        <ImageView
            android:id="@+id/recent_image"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/unavailable"
            android:contentDescription="@string/unavailable" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/list"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:scrollbars="none" />

    </LinearLayout>

</ScrollView>