<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FE"
    tools:context=".AstronomyQuizFirstActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="-70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_curved_bg" />

                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="-115dp"
                    android:layout_marginLeft="-115dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/circle_bg_big" />

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="-60dp"
                    android:layout_marginRight="-60dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/circle_bg_small" />
                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/back_arrow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/roboto_bold"
                        android:textAlignment="center"
                        android:textSize="27sp"
                        android:text="Quiz"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:layout_marginTop="40dp"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:text="@string/astronomy_question_1"
                        android:gravity="center_horizontal" />

                </LinearLayout>

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="27dp">

                <RadioButton
                    android:id="@+id/option_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/option_bg"
                    android:drawablePadding="15dp"
                    android:drawableLeft="@drawable/custom_radio_button"
                    android:button="@null"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/custom_radio_button" />

                <RadioButton
                    android:id="@+id/option_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="13dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/option_bg"
                    android:drawablePadding="15dp"
                    android:drawableLeft="@drawable/custom_radio_button"
                    android:button="@null"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/custom_radio_button" />

                <RadioButton
                    android:id="@+id/option_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="13dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/option_bg"
                    android:drawablePadding="15dp"
                    android:drawableLeft="@drawable/custom_radio_button"
                    android:button="@null"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/custom_radio_button" />

                <RadioButton
                    android:id="@+id/option_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="13dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/option_bg"
                    android:drawablePadding="15dp"
                    android:drawableLeft="@drawable/custom_radio_button"
                    android:button="@null"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/custom_radio_button" />


            </RadioGroup>

            <Button
                android:id="@+id/next_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:background="@drawable/start_button"
                android:textColor="#ffffff"
                android:fontFamily="@font/roboto_bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textSize="19sp"
                android:textAllCaps="false"
                android:layout_marginBottom="50dp"
                android:text="Next" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/result_bg_top">

                </LinearLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/right_icon" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="21dp"
                android:paddingRight="21dp"
                android:background="@drawable/result_bg_bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="25dp"
                    android:paddingTop="21dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Congrats!"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="40sp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="#0BBF29"
                        android:text="@string/score"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Your quiz is completed successfully."
                        android:gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/summary"
                        android:gravity="center_horizontal" />

                    <Button
                        android:id="@+id/go_home"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="#ffffff"
                        android:layout_marginTop="23dp"
                        android:background="@drawable/start_button"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="OK" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>